# python-project-difference

./: .gitignore  Makefile  README.md  pyproject.toml
gendiff/: cli.py  data.py  diff.py  generate_diff.py
gendiff/formats/: create_json.py  format.py  formatter.py  json.py  make_json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: gentest.py
