[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["trun <e.s.trunov@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
coverage = "^7.6.9"
flake8 = "^7.1.1"
iniconfig = "^2.0.0"
packaging = "^24.2"
pluggy = "^1.5.0"
pycodestyle = "^2.12.1"
pyflakes = "^3.2.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
argparse = "^1.4.0"
pathlib = "^1.0.1"
colorama = "^0.4.6"
exceptiongroup = "^1.2.2"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
