[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["trun <e.s.trunov@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
pytest = "^8.3.4"
path = "^17.1.0"
yml = "^0.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
